--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "react-dom": "18.2.0",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
